force-app/main/default/objects/Service_Catalog_Entry__c/Service_Catalog_Entry__c.object-meta.xml
<CustomObject>
    <label>Service Catalog Entry</label>
    <nameField>
        <displayFormat>SCE-{000000}</displayFormat>
        <label>Service Catalog Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Catalog Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>