force-app/main/default/objects/Service_Catalog_Entry__c/fields/Catalog_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item_Number__c</fullName>
    <label>Catalog Item Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>