force-app/main/default/objects/Service_Catalog_Entry__c/fields/Comparison_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>