force-app/main/default/objects/Service_Catalog_Entry__c/fields/Focus_Category__c.field-meta.xml
<CustomField>
    <fullName>Focus_Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>