force-app/main/default/objects/Service_Catalog_Entry__c/fields/Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>Impact_Level__c</fullName>
    <label>Impact Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>