force-app/main/default/objects/Service_Catalog_Entry__c/fields/Popularity_Score__c.field-meta.xml
<CustomField>
    <fullName>Popularity_Score__c</fullName>
    <label>Popularity Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>